Fixed alignment error of loading text

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -301,6 +301,12 @@ button:hover {
         grid-template-columns: auto;
     }
 
+    .loading {
+        width: 100%;
+        left: 0;
+        text-align: center;
+    }
+
     .gifs {
         flex-direction: column;
     }
